[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtdctk"
version = "1.0"
authors = [
  { name="Samuel Piquer Esteban", email="samuel.piquer@uv.es" },
]
description = "MTD Curation Toolkit"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'aioftp', 'aiohttp', 'parfive',
    'termcolor', 'tabulate', 'tqdm',
    'mg-toolkit', 'pandas',
]


[project.urls]
"GitHub" = "https://github.com/tbcgit/mtdctk"
"Documentation" = "https://github.com/tbcgit/mtdctk/wiki"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ['src']
namespaces = true

[tool.setuptools.package-data]
"mtdctk.test_info" = ["*.log", "*.tsv"]

[project.scripts]
check_fastqs_ENA            = 'mtdctk.check_fastqs_ENA:main'
check_metadata_ENA          = 'mtdctk.check_metadata_ENA:main'
download_fastqs_ENA         = 'mtdctk.download_fastqs_ENA:main'
download_metadata_ENA       = 'mtdctk.download_metadata_ENA:main'
filter_metadata             = 'mtdctk.filter_metadata:main'
make_treatment_template_ENA = 'mtdctk.make_treatment_template_ENA:main'
merge_metadata              = 'mtdctk.merge_metadata:main'
test_mtdctk                 = 'mtdctk.test:main'
treat_fastqs                = 'mtdctk.treat_fastqs:main'
treat_metadata_ENA          = 'mtdctk.treat_metadata_ENA:main'
